CloudAlpacas-repo/salesforce/main/default/objects/EmailEngagement__c/EmailEngagement__c.object-meta.xml
<CustomObject>
    <description>Recipient-level engagement event for an email send (sent / open / click / bounce / unsubscribe).</description>
    <label>Email Engagement</label>
    <nameField>
        <displayFormat>EE-{00000000}</displayFormat>
        <label>Email Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Engagements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>