CloudAlpacas-repo/salesforce/main/default/objects/EmailEngagement__c/fields/Email_Recipient_Send_Status__c.field-meta.xml
<CustomField>
    <fullName>Email_Recipient_Send_Status__c</fullName>
    <label>Email Recipient Send Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>