CloudAlpacas-repo/salesforce/main/default/objects/EmailEngagement__c/fields/Sendtime_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Sendtime_Email_Address__c</fullName>
    <label>Sendtime Email Address</label>
    <type>Email</type>
</CustomField>